# kims

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: pull-request.yml  python.yml
src/day_1/: Makefile
src/day_1/ch1_env_usage/: cartpole.py  frozenlake_4x4.py  frozenlake_8x8.py  frozenlake_human_play.py
src/day_1/ch2_dp/: visualization.py
src/day_1/ch2_dp/policy_iteration/: policy_iteration_problem.py  policy_iteration_solution.py  visualization.py
src/day_1/ch2_dp/value_iteration/: value_iteration_problem.py  value_iteration_solution.py  visualization.py
src/day_1/ch2_q_learning/: visualization.py
src/day_1/ch3_dqn/problem/: dqn.py
src/day_1/ch3_dqn/solution/: dqn.py  main.py
src/day_1/ch3_q_learning/: q_learning_problem.py  q_learning_solution.py
src/day_1/ch4_dqn/: dqn_solution.py
src/day_1/ch4_dqn/problem/: dqn.py  main.py  replay_buffer.py
src/day_1/ch4_dqn/solution/: dqn.py  main.py  replay_buffer.py
src/day_2/: Makefile  requirements.txt
src/day_2/actor_critic/: actor_critic_cartpole.py
src/day_2/actor_critic/solution/: actor_critic_cartpole.py  actor_critic_pendulum.py  test.py
src/day_2/ddpg/: ddpg.py
src/day_2/ddpg/solution/: ddpg.py
src/day_2/ppo/: ppo.py  requirements.txt
src/day_2/ppo/solution/: ppo.py
src/day_2/reinforce/: 1.reinforce_naive.py  2.reinforce_batch.py  3.reinforce_baseline.py  reinforce.py  reinforce_cartpole_base.py  reinforce_cartpole_baseline.py  reinforce_cartpole_batch.py  reinforce_pendulum.py
src/day_2/reinforce/solution/: 2.reinforce_batch.py  3.reinforce_baseline.py  4.reinforce_pendulum.py  reinforce.py  reinforce_base.py  reinforce_baseline.py  reinforce_batch_ver1.py  reinforce_cartpole_base.py  reinforce_cartpole_baseline.py  reinforce_cartpole_batch.py  reinforce_pendulum.py
src/day_2/runs/reinforce-cartpole-2023-06-11 17:35:21/: events.out.tfevents.1686472521.Jiyoonui-Macmini.local.99970.0
src/day_2/runs/reinforce-cartpole-2023-06-11 17:37:03/: events.out.tfevents.1686472623.Jiyoonui-Macmini.local.306.0
src/day_2/runs/reinforce-cartpole-batch-2023-06-11 21:03:09/: events.out.tfevents.1686484989.Jiyoonui-Macmini.local.21558.0
src/day_2/runs/reinforce-cartpole-batch-2023-06-11 21:03:49/: events.out.tfevents.1686485029.Jiyoonui-Macmini.local.21722.0
src/day_2/sac/: sac.py
src/day_2/sac/solution/: sac.py
src/day_3/: LICENSE.txt  Makefile  README.md  python_fix.sh  requirements-part-1.txt  requirements-part-2.txt  requirements.txt  sample.py  setup.py
src/day_3/config/: cartpole.usda  cartpole.yaml  config.yaml  config_multi.yaml  config_single.yaml  ppo.yaml  rl_games_ppo.yaml  sb3_ppo.yaml
src/day_3/isaac/cartpole_train/: cartpole.py  ppo.py  train.py  train_sb3.py
src/day_3/rl_simulation_class/: first_load.py  get_remote_ip.py  run_websocket.py  train.py  train_multi.py  train_old.py  train_sb3.py  train_single.py
src/day_3/rl_simulation_class/part_1/: simple_cartpole.py  simple_rl_task.py
src/day_3/rl_simulation_class/part_1/solution/: simple_cartpole.py
src/day_3/rl_simulation_class/part_2/: multi_cartpole.py  multi_env_rl_task.py
src/day_3/rl_simulation_class/part_2/solution/: multi_env_rl_task.py
src/day_3/rl_simulation_class/policy/: ppo.py
src/day_3/rl_simulation_class/robot/: cartpole.py
src/day_3/rl_simulation_class/tasks/: multi_cartpole.py  multi_env_rl_task.py  simple_cartpole.py  simple_rl_task.py
src/day_3/rl_simulation_class/utils/: config.py  vec_env.py
