[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jiyoon Lim", email = "luinpark@gmail.com"},
]
dependencies = [
    "gym @ file:///${PROJECT_ROOT}/externals/gym",
    "pandas>=1.3.5",
    "pre-commit>=2.21.0",
]
requires-python = ">=3.7.1, <3.8"
license = {text = "MIT"}
