[project]
name = "kims"
version = "0.1.0"
description = "Reinforcement learning education conducted by Korea Institute of Materials Science (KIMS)"
authors = [
    {name = "dongminlee94", email = "kid33629@gmail.com"},
    {name = "limjiyoon", email = "luinpark@gmail.com"},
    {name = "yurirocha15", email = "yurirocha15@gmail.com"},
]
dependencies = [
    "gym @ file:///${PROJECT_ROOT}/externals/gym",
    "pandas==1.3.5",
    "stable-baselines3 @ file:///${PROJECT_ROOT}/externals/stable-baselines3",
]
requires-python = ">=3.7.1,<3.8"
readme = "README.md"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "pytest>=7.3.0",
    "pyright>=1.1.304",
    "ruff>=0.0.261",
    "pre-commit>=2.21.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"
skip_gitignore = true

# Python Formatter
[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep-naming
    "D",  # pydocstyle
    "B",  # flakes-bugbear
    "ANN",# flakes-annotations
    "A",  # flakes-builtins
    "COM",# flakes-commas
    "T10",# flakes-debugger
    "SIM",# flakes-simplify
    "ARG",# flakes-unused-arguments
    "PLC",# pylint-convention
    "PLE",# pylint-errors
    "UP",  # pyupgrade
    "PL"  # pylint
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["I", "D", "COM", "PLC", "UP", "W292"]
ignore = ["D104", "D406", "D407", "D408", "D409", "D415", "D203", "D213", "D417", "B905", "ANN002", "ANN003", "ANN101", "ANN102", "ANN401", "ANN204", "COM812", "D107", "N812", "A003", "B008"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 110
show-source = true

# Assume Python 3.7.
target-version = "py37"

pylint = {"max-args"=12, "max-statements"=60}

# Python static type checker
[tool.pyright]
include = ["kims"]
exclude = ["externals/**"]
reportMissingImports = true
